--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<body>
-  <h1>The Brown Bear</h1>
-  <div id="introduction">
-    <h2>About Brown Bears</h2>
-    <p>The brown bear (<em>Ursus arctos</em>) is native to parts of northern Eurasia and North America. Its conservation status is currently <strong>Least Concern</strong>.<br /><br /> There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear.</p>
+<!DOCTYPE html>
+<html>
+<head>
+  <Title>Page Title</Title>  
+  </head>
+  <body>
+    
+    <h1>This is a Heading</h1>
+    <p>This is a Paragraph</p>
+    
+  </body>
+</html>
