--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <Title>Page Title</Title>  
+   <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     
