--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     
-    <h1>This is a Heading</h1>
-    <p>This is a Paragraph</p>
+    <h1>About Me!</h1>
+    <p>This is all about me.</p>
     
   </body>
 </html>
