--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     
     <h1>About Me!</h1>
-    <p>This is all about me.</p>
+    <p>I've lived in Flordia for most of my life with my two brothers and many other family members. </p>
     
   </body>
 </html>
