--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <Title>Page Title</Title>  
-   <link href="style.css" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <body>
     
