--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <li>Intro to Programming</li>
       <li>Calculus</li>
       <li>Psychology</li>
-      <li>Intro to Computer Science</li>
+      <li>Intro to Computer Sciencel</li>
     </ul>
     
   </body>
