--- a/index.html
+++ b/index.html
@@ -18,9 +18,18 @@
       <li>Intro to Programming</li>
       <li>Calculus</li>
       <li>Psychology</li>
-      <li>Intro to Computer Sciencel</li>
+      <li>Intro to Computer Science</li>
     </ul>
-    
+    <h3>Work Samples</h3>
+    <ul>
+      <li>Scratch Project 2: Stereo Saiyan 3D</li>
+      <li>Learning HTML and CSS from Codeacademy</li>
+    </ul>
+    <h4>links to my works</h4>
+    <ul>
+      <li>https://scratch.mit.edu/users/Ocarinauser/</li>
+      <li>https://www.codecademy.com/Ocarinauser</li>
+    </ul>
   </body>
   
 </html>
