--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     
-    <h1>Portfolio</h1>
+    <h1 class= "byline"> Portfolio</h1>
     <p>About Me: I've lived in Flordia for most of my life with my two brothers and many other family members.
       I Graduated from Barron Collier High School and now I'm taking classes in Flordia Gulf Coast University.
       I plan on graduating and going to make or design video games, because I have a deep passion for them.
@@ -20,7 +20,7 @@
       <li>Psychology</li>
       <li>Intro to Computer Science</li>
     </ul>
-    <h3>Work Samples</h3>
+    <h3>.Work Samples</h3>
     <ul>
       <li>Scratch Project 2: Stereo Saiyan 3D</li>
       <li>Learning HTML and CSS from Codeacademy</li>
