--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
       <li>https://scratch.mit.edu/users/Ocarinauser/</li>
       <li>https://www.codecademy.com/Ocarinauser</li>
     </ul>
+    <div class="image">
+    <p class="caption">That</p>
+  </div>
   </body>
   
 </html>
