--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <li>https://www.codecademy.com/Ocarinauser</li>
     </ul>
     <div class="image">
-    <p class="caption">That</p>
+    <p class="caption">That's me taking a profile picture with a hat.</p>
   </div>
   </body>
   
