--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div id="introduction">
     <h1 class= "byline"> Portfolio:</h1>
       
-    <p>About Me: My name is Benjamin Zeitler, and I go by Ben. I've lived in Flordia for most of my life with my two brothers and many other family members.
+    <p>About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with my two brothers and many other family members.
       I Graduated from Barron Collier High School and now I'm taking classes in Flordia Gulf Coast University.
       I plan on graduating and going to make or design video games, because I have a deep passion for them.
       I worked as a server at a local resteruant called Crispers ans i was a Counselor at a camp in North Carolina
