--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       I like to play tennis and I like to get along well with others.
       I'm also a good rock climber since I got a lot of experience from my camping days.
       My favorite foods are burgers, pizza, ice cream, and cinnamon pretzels.
+      I also like to watch movies that are action packed like Marvel and Star Wars.
+      I also love to watch anime, I like the art, storytelling, and characters in each anime I watch.
     </p>
     </div>
     
