--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 class= "byline"> Portfolio:</h1>
       
     <p element= "p" >About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with my two brothers and many other family members.
-      I Graduated from Barron Collier High School and now I'm taking classes in Flordia Gulf Coast University.
+      I graduated from Barron Collier High School and now I'm taking classes in Flordia Gulf Coast University.
       I plan on graduating and going to make or design video games, because I have a deep passion for them.
-      I worked as a server at a local resteruant called Crispers ans i was a Counselor at a camp in North Carolina
+      I worked as a server at a local resteruant called Crispers ans I was a counselor at a camp in North Carolina
       called High Rocks.
       I'm a huge video game nerd enthusiast, my most favorite game right now is Shadow of the Colossus. 
       I like to play tennis and I like to get along well with others.
