--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@ ctx.font = "30px Arial";
 ctx.strokeText(" I’m gnot a goblin. I’m a gnome. And you’ve been, GNOMED’",10,50);
 </script>
 </canvas>
-    
+    <svg width="300" height="200">
+  <polygon points="100,10 40,198 190,78 10,78 160,198"
+  style="fill:lime;stroke:purple;stroke-width:5;fill-rule:evenodd;" />
+</svg>
 
   </body>
   
