--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 var c = document.getElementById("myCanvas");
 var ctx = c.getContext("2d");
 ctx.font = "30px Arial";
-ctx.strokeText(" I’m gnot a goblin. I’m a gnome. And you’ve been, GNOMED’",10,50);
+ctx.strokeText("Now that's an epic victory royale.",10,50);
 </script>
 </canvas>
     
