--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
     <video width="320" height="240" controls>
   <source src="movie.mp4" type="video/mp4">
   <source src="movie.ogg" type="video/ogg">
+  Your browser does not support the video tag.
 </video>
     
    <a href="Fields Report Ben Zeitler.docx ">Fields Report</a> 
