--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
   Your browser does not support the video tag.
 </video>
     
-   <a href="fieldsreportBenZeitler.pdf">Fields Report</a> 
+   <embed src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://ocarinauser.github.io/WebDemos/fieldsreportBenZeitler.pdf" width="500" height="375"> 
     
   </body>
   
