--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     
     <div id="introduction">
-    <h1 class= "byline"> Epic gamer: Benjamin Jon Zeitler</h1>
+    <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
     <p element= "p" >About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with my two brothers and many other family members.
       I graduated from Barron Collier High School and now I'm taking classes in Flordia Gulf Coast University.
