--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
   Your browser does not support the video tag.
 </video>
     
-   <embed src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://Ocarinauser.github.io/WebDemos/fieldreportBenZeitler.pdf" width="500" height="375"> 
+   <embed src="https://Ocarinauser.github.io/fieldreportBenZeitler.pdf" type="application/pdf" /> 
     
   </body>
   
