--- a/index.html
+++ b/index.html
@@ -72,10 +72,9 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
   <source src="http://peal.io/p/dance-song-1-fortnite.mp3" type="audio/mpeg">
 </audio>
   
-    <video width="320" height="240" controls>
-  <source src="https://youtu.be/Y9G20wV0KHE.mp4" type="video/mp4">
-  
-  
+    <h2 align= "center" > This is one of my favorite anime openings</h2>
+    <video width="320" height="240" controls align= "center">
+  <source src="Erased.mp4" type="video/mp4">
 </video>
     
    <embed src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://Ocarinauser.github.io/fieldreportBenZeitler.pdf" width="500" height="375">
