--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="introduction">
     <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
-    <p element= "p" >About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with my two brothers and many other family members.
+    <p> About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with my two brothers and many other family members.
       I graduated from Barron Collier High School and now I'm taking classes in Flordia Gulf Coast University.
       I plan on graduating and going to make or design video games, because I have a deep passion for them.
       I worked as a server at a local resteruant called Crispers and I was a counselor at a camp in North Carolina
