--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
     <p> About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with both my two brothers.
+      I was born Jewish and studyed Hebrew and had a Bar Mitzvah.
       I graduated from Barron Collier High School and I'm now taking classes in Flordia Gulf Coast University.
       I plan on graduating and going to make or design video games because of my passion for them.
       I worked as a server at a local resteruant called Crispers and I was a counselor at a camp in North Carolina
@@ -71,16 +72,18 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
     
     <h2 align= "center" >Made a nice star</h2>
     <svg width="300" height="200">
-  <polygon points="100,10 40,198 190,78 10,78 160,198"
+ <polygon points="155,10 40,10 100,130"
   style="fill:blue;stroke:yellow;stroke-width:5;fill-rule:evenodd;" />
-</svg>
+  <polygon points="100,1 40,100 155,100"
+  style="fill:blue;stroke:yellow;stroke-width:5;fill-rule:evenodd;" />
+  </svg>
  
-    <h2 align= "center" >Video game music that tells you you're gonna have a bad time</h2>
+    <h2 align= "center" >Video game music that tells you you're gonna have a bad time; Megalovania</h2>
 <audio controls>
   <source src= "Megalovania.mp3"type="audio/mpeg">
 </audio>
   
-    <h2 align= "center" > This is one of my favorite anime openings</h2>
+    <h2 align= "center" > This is one of my favorite anime openings, the anime is called Erased</h2>
     <video width="320" height="240" controls align= "center">
   <source src="Erased.mp4" type="video/mp4">
 </video>
