--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       My favorite foods are burgers, pizza, ice cream, and cinnamon pretzels.
       I also like to watch movies that are action packed like Marvel and .
       Love to watch anime, I like the art, storytelling, and characters in each anime I watch.
-    </p>Star Wars
+    </p>
     </div>
     
       <div id="List 1">
@@ -83,7 +83,7 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
   <source src= "Megalovania.mp3"type="audio/mpeg">
 </audio>
   
-    <h2 align= "center" > This is one of my favorite anime openings, the anime is called Erased</h2>
+    <h2 align= "center" > This is one of my favorite anime openings, anime is called Erased</h2>
     <video width="320" height="240" controls align= "center">
   <source src="Erased.mp4" type="video/mp4">
 </video>
