--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@ ctx.strokeText("Now that's an epic victory royale.",10,50);
   style="fill:blue;stroke:yellow;stroke-width:5;fill-rule:evenodd;" />
   </svg>
  
-    <h2 align= "center" >Video game music that tells you you're gonna have a bad time; Megalovania</h2>
+    <h2 align= "center" >you're gonna have a bad time</h2>
 <audio controls>
   <source src= "Megalovania.mp3"type="audio/mpeg">
 </audio>
   
-    <h2 align= "center" > This is one of my favorite anime openings, anime is called Erased</h2>
+    <h2 align= "center" > This is one of my favorite anime openings, Erased</h2>
     <video width="320" height="240" controls align= "center">
   <source src="Erased.mp4" type="video/mp4">
 </video>
