--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <html lang="en-US">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <Title>Page Title</Title>  
