--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <body>
     
     <div id="introduction">
+      <div class="navigation-bar">
+        <a class="link" href= "index.html">Home</a>
+        <a class="link" href= "work.html">Work</a>
+      </div>
     <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
     <p> About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with both my two brothers.
