--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     
     <div id="introduction">
       <div class="navigation-bar">
-        <a class="link" href= "index.html">Home</a>
-        <a class="link" href= "work.html">Work</a>
+        <a href= "index.html">Home</a>
+        <a href= "work.html">Work</a>
       </div>
     <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
