--- a/work.html
+++ b/work.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class= "navagation-bar"
-<a class="link" href="index.html" >Home</a>
-<a class="link" href="work.html" >Work</a>
+<a href="index.html" >Home</a>
+<a href="work.html" >Work</a>
 </div>
 
 <h1>Accessibility Discussion</h2><br>
