--- a/work.html
+++ b/work.html
@@ -14,6 +14,6 @@
 
 <h1>Accessibility Discussion</h2><br>
 <div id="accessibility-container">
-<p> I have made my website to fit properly on my screen at any size.
+<p> I have made my website to fit properly on my screen at any size. I made a body paragraph describing myself and what I do.
 </div>
 
