--- a/work.html
+++ b/work.html
@@ -8,12 +8,12 @@
 <body>
 
 <div class= "navagation-bar"
-<a href="index.html" >Home</a>
+<a href= "index.html">Home</a>
 <a href="work.html" >Work</a>
 </div>
 
 <h1>Accessibility Discussion</h2><br>
 <div id="accessibility-container">
-<p> I have made my website to fit properly on my screen at any size. I made a body paragraph describing myself and what I do.
+<p> I have made my website to fit properly on my screen at any size. I made a body paragraph describing myself and what I do. I used canvas and svg elements to make art for my website. I used an audio file from a game to include in my portfolio. I typed an essay and included it as a pdf file in my website for everyone to read. I also included an video file to show people my favorite anime opening.
 </div>
 
