--- a/work.html
+++ b/work.html
@@ -7,12 +7,10 @@
 
 <body>
 
-<div class= "navagation-bar"
-
-     <a href = "work.html" >Work</a>
-     <a href = "index.html" >Home</a>
-  
-</div>
+      <div class="navigation-bar">
+        <a href= "index.html">Home</a>
+        <a href= "work.html">Work</a>
+      </div>
 
 <h1>Accessibility Discussion</h2><br>
 <div id="accessibility-container">
