--- a/work.html
+++ b/work.html
@@ -12,8 +12,14 @@
         <a href= "work.html">Work</a>
       </div>
 
-<h1>Accessibility Discussion</h2><br>
+<h1>Accessibility Page</h2><br>
 <div id="accessibility-container">
-<p> I have made my website to fit properly on my screen at any size. I made a body paragraph describing myself and what I do. I used canvas and svg elements to make art for my website. I used an audio file from a game to include in my portfolio. I typed an essay and included it as a pdf file in my website for everyone to read. I also included an video file to show people my favorite anime opening.
+<p>  I made a body paragraph describing myself and what I do. I used canvas and svg elements to make art for my website.
+      I used an audio file from a game to include in my portfolio.
+      I typed an essay and included it as a pdf file in my website for everyone to read.
+      I also included an video file to show people my favorite anime opening.
+      I have made my website to fit properly on my screen at any size.
+      I included a navigation bar to go to links like this work page.
+      I did this because I wanted to improve my coding and wanted to see what I created.
 </div>
 
