--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
     <p> About Me: My name is Benjamin Zeitler, I go by Ben. I've lived in Flordia for most of my life with both my two brothers.
-      I was born Jewish and studyed Hebrew and had a Bar Mitzvah.
+      I was born Jewish and studied Hebrew and had a Bar Mitzvah.
       I graduated from Barron Collier High School and I'm now taking classes in Flordia Gulf Coast University.
       I plan on graduating and going to make or design video games because of my passion for them.
-      I worked as a server at a local resteruant called Crispers and I was a counselor at a camp in North Carolina
+      I worked as a server at a local restaurant called Crispers and I was a counselor at a camp in North Carolina
       called High Rocks.
       I'm a huge video game nerd enthusiast, my most favorite game right now is Shadow of the Colossus. 
       I like to play tennis and I like to get along well with others.
       I'm also a good rock climber since I got a lot of experience from my camping days.
       My favorite foods are burgers, pizza, ice cream, and cinnamon pretzels.
-      I also like to watch movies that are action packed like Marvel and .
-      Love to watch anime, I like the art, storytelling, and characters in each anime I watch.
+      I also like to watch movies that are action packed like Marvel and
+      love to watch anime, I like the art, storytelling, and characters in each anime I watch.
     </p>
     </div>
     
