--- a/work.html
+++ b/work.html
@@ -18,9 +18,9 @@
       I used an audio file from a game to include in my portfolio.
       I typed an essay and included it as a pdf file in my website for everyone to read.
       I also included an video file to show people my favorite anime opening.
-      I have made my website to fit properly on my screen at any size.
+      I have made my website to fit properly on my screen at any size.created
       I included a navigation bar to go to links like this work page.
-      I did this because I wanted to improve my coding and wanted to see what I created.
+      I did this because I wanted to improve my coding and wanted to see what I .
 </div>
       
       
@@ -41,7 +41,8 @@
                   if (encryptor !=null) {
                         document.getElementById("output").innerHTML = encryptor
                         while(count < timesToExecute){
-                              asciiCode = encryptor.charCodeAt(position); // gets the code for the first letter shiftedAsciiCode =asciiCode +3;//
+                              asciiCode = encryptor.charCodeAt(position); 
+                              shiftedAsciiCode =asciiCode +3;
                               encryptedMessage = encryptedMessage + String.fromCharCode(shiftedAsciiCode);
                               position = position + 1;}
                         count = count + 1;}
