--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
                               asciiCode = encryptor.charCodeAt(position); 
                               shiftedAsciiCode =asciiCode +3;
                               encryptedMessage = encryptedMessage + String.fromCharCode(shiftedAsciiCode);
-                              position = position + 1;}
+                              position = position + 1;
                         count = count + 1;}
                   document.getElementById("output").innerHTML = encryptedMessage;}}
       </script>
