--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
       I also included an video file to show people my favorite anime opening.
       I have made my website to fit properly on my screen at any size.created
       I included a navigation bar to go to links like this work page.
-      I did this because I wanted to improve my coding and wanted to see what I .
+      I did this because I wanted to improve my coding and wanted to see what I could do for my personal website.
 </div>
       
       
