--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
 
       <div class="navigation-bar">
         <a href= "index.html">Home</a>
-        <a href= "work.html">Work</a>
+        <a href= "work.html">Accessibility</a>
       </div>
 
 <h1>Accessibility Page</h1><br>
