--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="introduction">
       <div class="navigation-bar">
         <a href= "index.html">Home</a>
-        <a href= "work.html">Work</a>
+        <a href= "work.html">Accessibility</a>
       </div>
     <h1 class= "byline"> Epic gamer: Ben Zeitler</h1>
       
