--- a/work.html
+++ b/work.html
@@ -17,7 +17,7 @@
 <p>  I made a body paragraph describing myself and what I do. I used canvas and svg elements to make art for my website.
       I used an audio file from a game to include in my portfolio.
       I typed an essay and included it as a pdf file in my website for everyone to read.
-      I also included an video file to show people my favorite anime opening.
+      I also included a video file to show people my favorite anime opening.
       I have made my website to fit properly on my screen at any size.created
       I included a navigation bar to go to links like this work page.
       I did this because I wanted to improve my coding and wanted to see what I could do for my personal website.
